style(css): Fix button/icon spacing on detail page
- Remove margin-right from icons inside buttons/links (was 0.375rem)
- Add .action-icon-btn .icon selector to icon-only button rules
- Set action-icon-btn min-height to 34px (was 36px)
- Add margin-left: 0 to like-count on detail page

--- a/static/css/components/icons.css
+++ b/static/css/components/icons.css
@@ -66,11 +66,12 @@
 .btn .icon,
 button .icon,
 a .icon {
-    margin-right: 0.375rem;
+    margin-right: 0;
 }
 
 /* Icon-only buttons */
-.btn-icon .icon {
+.btn-icon .icon,
+.action-icon-btn .icon {
     margin-right: 0;
 }
 
